# tiny-infer

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  requirements.txt
docker/: Dockerfile  run.sh
include/: loader.h  model.h
src/: attention.cu  gemm.cu  loader.cu  main.cu  model.cu  rms_norm.cu
validation/: validate_embedding.py  validate_rms_norm.py  validate_rope.py
